microclusters/workload/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ambient-demo
  labels:
    name: ambient-demo
    istio.io/dataplane-mode: ambient
